--- a/index.html
+++ b/index.html
@@ -31,10 +31,52 @@
     <h3>Agh! I'm sorry! Wrong file!!!! >~<</h3>
     <br>
     <br>
+    <img src="images/SCPglitch.jpg" alt="Logo">
+    <br>
+    <br>
     <h2>As an apology, I'll give you this gift, to fix our friendship!</h2>
     <a class="btn btn-warning" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" role="button">My apology gift</a>
     <h4>Sorry :D</h4>
 
+
+    <h1>A few of the Hidden Legends of the MRF</h1>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="https://www.youtube.com/channel/UCQCnMFr8uHBaMTaNBhych_A">The Watcher</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="https://www.youtube.com/channel/UC7_YxT-KID8kRbqZo7MyscQ">E<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="https://www.youtube.com/channel/UCbnA_wQEdPWbLipG0UxTvBQ">We must sacrifice Stan</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="https://www.youtube.com/channel/UC1GNOke2DJrgPaE2QlWMEsQ">God of Knowledge</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="https://www.youtube.com/channel/UC-lHJZR3Gqxm24_Vd_AJ5Yw">The Reviewer</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="https://www.youtube.com/user/memeulous">The Judge</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<br>
+<br>
+<br>
+
+<div class="jumbotron">
+  <h1 class="display-4">Warning!</h1>
+  <p class="lead">I was raised to be the defender of the MRF</p>
+  <hr class="my-4">
+  <p>Any breaching of this information will call for code [REDACTED]</p>
+  <a class="btn btn-primary btn-lg" href="https://www.youtube.com/watch?v=Ya1pDAOKyzk" role="button">Got it?</a>
+</div>
 
 
     <!-- Optional JavaScript -->
