--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <h4>Sorry :D</h4>
 
 
-    <h1>A few of the Hidden Legends of the MRF</h1>
+    <h1>A few of the Hidden Legends of the YTLD</h1>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="https://www.youtube.com/channel/UCQCnMFr8uHBaMTaNBhych_A">The Watcher</a>
@@ -72,10 +72,22 @@
 
 <div class="jumbotron">
   <h1 class="display-4">Warning!</h1>
-  <p class="lead">I was raised to be the defender of the MRF</p>
+  <p class="lead">I was raised to be the defender of the YTLD</p>
   <hr class="my-4">
   <p>Any breaching of this information will call for code [REDACTED]</p>
   <a class="btn btn-primary btn-lg" href="https://www.youtube.com/watch?v=Ya1pDAOKyzk" role="button">Got it?</a>
+</div>
+<br>
+<br>
+<br>
+<br>
+<div class="card" style="width: 18rem;">
+  <img src="images/SCPglitch.jpg" class="card-img-top" alt="logo">
+  <div class="card-body">
+    <h5 class="card-title">YTLD</h5>
+    <p class="card-text">The YTLD is a branch made by the foundation as a quick resort to counter an [REDACTED] event.</p>
+    <a href="http://www.scp-wiki.net/" class="btn btn-primary">More on the foundation</a>
+  </div>
 </div>
 
 
