--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>A quick project</title>
     <style>
     body{
-      background-color: turquoise;
+      background-color: #654F6F;
     }
 
 
@@ -31,14 +31,15 @@
     <h3>Agh! I'm sorry! Wrong file!!!! >~<</h3>
     <br>
     <br>
+    <center>
     <img src="images/SCPglitch.jpg" alt="Logo">
+  </center>
     <br>
     <br>
     <h2>As an apology, I'll give you this gift, to fix our friendship!</h2>
     <a class="btn btn-warning" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" role="button">My apology gift</a>
     <h4>Sorry :D</h4>
-
-
+<center>
     <h1>A few of the Hidden Legends of the YTLD</h1>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -63,9 +64,19 @@
       <li class="nav-item active">
         <a class="nav-link" href="https://www.youtube.com/user/memeulous">The Judge</a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="https://www.youtube.com/channel/UCtHaxi4GTYDpJgMSGy7AeSw/videos">God of Lightning</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="https://www.youtube.com/channel/UCtHaxi4GTYDpJgMSGy7AeSw/videos"></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="https://www.youtube.com/channel/UCtHaxi4GTYDpJgMSGy7AeSw/videos"></a>
+      </li>
     </ul>
   </div>
 </nav>
+</center>
 <br>
 <br>
 <br>
@@ -75,12 +86,13 @@
   <p class="lead">I was raised to be the defender of the YTLD</p>
   <hr class="my-4">
   <p>Any breaching of this information will call for code [REDACTED]</p>
-  <a class="btn btn-primary btn-lg" href="https://www.youtube.com/watch?v=Ya1pDAOKyzk" role="button">Got it?</a>
+  <a class="btn btn-danger btn-lg" href="https://www.youtube.com/watch?v=Ya1pDAOKyzk" role="button">Got it?</a>
 </div>
 <br>
 <br>
 <br>
 <br>
+<center>
 <div class="card" style="width: 18rem;">
   <img src="images/SCPglitch.jpg" class="card-img-top" alt="logo">
   <div class="card-body">
@@ -89,9 +101,9 @@
     <a href="http://www.scp-wiki.net/" class="btn btn-primary">More on the foundation</a>
   </div>
 </div>
+</center>
 
-
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">
   Don't click this please.
 </button>
 
@@ -116,6 +128,21 @@
     </div>
   </div>
 </div>
+
+
+<h1>A form if you want to become a defender</h1>
+<form>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Name/Nickname</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <small id="emailHelp" class="form-text text-muted">This is what you'll be known by</small>
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1">
+  </div>
+  <button type="submit" class="btn btn-primary">Submit your application</button>
+</form>
 
 
     <!-- Optional JavaScript -->
