--- a/index.html
+++ b/index.html
@@ -68,10 +68,22 @@
         <a class="nav-link" href="https://www.youtube.com/channel/UCtHaxi4GTYDpJgMSGy7AeSw/videos">God of Lightning</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="https://www.youtube.com/channel/UCtHaxi4GTYDpJgMSGy7AeSw/videos"></a>
+        <a class="nav-link" href="https://www.youtube.com/channel/UCzEnk4KWFlSj_PjXLz0-GMA">Right Hand Man</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="https://www.youtube.com/channel/UCtHaxi4GTYDpJgMSGy7AeSw/videos"></a>
+        <a class="nav-link" href="https://www.youtube.com/user/alpharadd">The ancient Builder</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="https://www.youtube.com/user/PewDiePie">Meme Lord</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="https://www.youtube.com/channel/UC_jMn3N5jILUj_FrR4NFTMw">The Purple Disguiser</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="https://www.youtube.com/user/TheMisterWobbles">The Musician</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="https://www.youtube.com/user/MatthewPatrick13">The Theorist</a>
       </li>
     </ul>
   </div>
@@ -86,7 +98,7 @@
   <p class="lead">I was raised to be the defender of the YTLD</p>
   <hr class="my-4">
   <p>Any breaching of this information will call for code [REDACTED]</p>
-  <a class="btn btn-danger btn-lg" href="https://www.youtube.com/watch?v=Ya1pDAOKyzk" role="button">Got it?</a>
+  <a class="btn btn-danger btn-lg" href="https://i.ytimg.com/vi/Zh4cRIrREfU/maxresdefault.jpg" role="button">Got it?</a>
 </div>
 <br>
 <br>
